edit hw01 index

--- a/hw01/index.html
+++ b/hw01/index.html
@@ -159,7 +159,8 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      本次作業讓我理解到做字體其實不是一件容易的事，尤其是每個人各自的手寫字體，要花費大量的時候手寫，才可以有足夠的資料。所以手會寫到非常痠，也第一次自己製作手寫字體包，非常的有趣，也非常的累。
+      透過這次親自手寫常用國字、日文，以及符號等，讓我學到不少平常不常用的字，雖然在寫的過程中手會又痠又累，時不時就需要休息一下，但在寫完共57頁的字後，將其一步步將稿紙做拆分、切割後
+      ，轉為svg並進行優化，便可以將它包裝成一個屬於自己的手寫字體，我覺得非常有趣，也很有成就感。
     </div>
   </div>
 
