--- a/hw00/index.html
+++ b/hw00/index.html
@@ -131,7 +131,8 @@
     </div>
     <div class="col-md-6 twenty">
       詠唱詞: 
-Generate a Japanese anime style scene. The scene was in the professor's office. A professor was introducing the class. The professor's appearance is chest-length straight black hair, flat bangs, and blue eyes. A male professor wearing a white lab uniform.   
+
+      日本動漫風格的大學男學生，短黑髮，喜歡電腦，偏內向，一張大頭照，配個背景
     </div>
   </div>
 
