--- a/hw02/index.html
+++ b/hw02/index.html
@@ -28,8 +28,8 @@
     src: url(https://kai-1220.github.io/ai2025s/hw02/112590012big5.woff2);
     }
   @font-face {
-    font-family:'113378043noto';
-    src: url(https://Garvin2009.github.io/ai2025s/hw02/113378043noto.woff2);
+    font-family:'112590012noto';
+    src: url(https://kai-1220.github.io/ai2025s/hw02/112590012noto.woff2);
     }
   table {
       border-collapse: collapse;
@@ -65,7 +65,7 @@
     font-family:'t112590012';
   }
   p2{
-    font-family:'113378043noto';
+    font-family:'112590012noto';
   }
   
   .flipswitch:after
@@ -182,7 +182,7 @@
   <div class="row hw12">
       <div class="col-md-12 twenty">
         noto字體包位置連結：授權至SIL開源字型
-        <input type="button" name="back" onclick="location.href='https://github.com/Garvin2009/ai2025s/blob/main/hw02/113378043noto.ttf'" value="按我 ٩(｡・ω・｡)و 前往">
+        <input type="button" name="back" onclick="location.href='https://github.com/Kai-1220/ai2025s/blob/main/hw02/112590012noto.ttf'" value="按我 ٩(｡・ω・｡)و 前往">
         (p.s 請記得修改網址)
       </div>
   </div>
