edit hw02 hw03 text

--- a/hw02/index.html
+++ b/hw02/index.html
@@ -168,7 +168,10 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      這次作業的流程沒有作業一那麼長，但是要花的時間比作業二久一點，但大部分時間是在訓練手寫字體的部分，所以比上一個作業輕鬆，上一個作業要手寫上千個文字非常的累人，但每天寫一點的話不算太累，作業二的strong base line要花一點時間去找到思源黑體的全文字。
+      這次的作業是要利用機器學習進行模型訓練，並使用訓練完成的模型進行推論，起初使用學校電腦進行訓練，但電腦因為被其他人關機，導致訓練檔消失
+      ，後來老師提供了另一種可以於colab上進行微調訓練的程式，讓我們不必再多花一周進行訓練，當微調完成後，我只花了2個晚上就把沒寫過的字全部推論完成，
+      並完成了本次作業。我覺得這個作業雖然耗時，但結果非常有趣，透過機器學習，不但能讓其學習模仿自己的字跡，還能讓它將自己沒寫過的字推論出來。
+      
     </div>
   </div>
   <!-- ------------------------------------------------>
