--- a/hw03/index.html
+++ b/hw03/index.html
@@ -177,7 +177,8 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      本次作業非常簡單，只要將同學們的字下載下來後，執行程式就完成了，而且還可以讓電腦去計算自己跟誰的字很像，還蠻有趣的。整個作業到此為止，都算是有趣的，前面的手寫到後來看到成品，幾乎是無法想像的。
+      這次的作業是透過相似分析，比對每個人所寫的「陳」的相似度，只要將大家的字從雲端下載下來，跑程式進行分析，就能夠產生比對後的csv檔案以及對應的png圖片。分析結果出來後，可以看到所有資料點的分布大約呈現一條直線，代表大部分人的字跡有一定程度的連貫性。不過，即使是與我自己寫的「陳」最相似的樣本，實際上在細節上仍然可以看出一些小小的差異，讓我覺得相當有趣。
+      
   </div>
 
   <!-- ------------------------------------------------>
