--- a/hw07/index.html
+++ b/hw07/index.html
@@ -215,7 +215,7 @@
     <div class="col-md-12 twenty">
        <td>3.Strong baseline - 通過助教的影片摘要審核</td><br>
        <img src="1.png"width="800" height="300" ><br>
-       <a href="output-A glimpse of the future through an augmented reality headset">輸出文檔</a><br> 
+       <a href="output-A glimpse of the future through an augmented reality headset.txt">輸出文檔</a><br> 
     </div>
   </div>
 
