--- a/hw06/index.html
+++ b/hw06/index.html
@@ -155,7 +155,7 @@
   <div class="row hw12">
     <div class="col-md-12 twenty">
       透過這次的作業，讓我學會如何使用Comfy UI與提示詞進行圖片生成，並透過連續圖片生成影片，以及有動畫之gif圖片，過程中，我發現因為需生成很多張照片，使得生成過程非常久
-      ，另外，我也嘗試修改Check Point跟LoRa，以及提示詞，讓圖片更符合我的要求，結果出來雖然有修正，但發現修改的程度有限，並完成了本次作業。
+      ，另外，我也嘗試修改Check Point跟LoRa，以及提示詞，讓圖片更符合我的要求，結果出來雖然修改的程度有限，但還是完成了本次作業。
     </div>
   </div>
 
